--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
   },
   "homepage": "https://github.com/gatoarmen/adecomp#readme",
   "dependencies": {
-    "bootstrap": "^4.1.3",
     "browser-sync": "^2.24.7",
     "express": "^4.16.3",
     "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.2.1",
-    "jquery": "^3.3.1"
-  }
+    "gulp-nodemon": "^2.2.1"
+  },
+  "devDependencies": {}
 }
